--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,22 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+button {
+    border: none;
+}
+
+#root {
+    height: 100vh;
+}
+
 .App {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    height: 100%;
+    overflow: hidden;
 }
 
 button {
