--- a/src/paginas/cadastro/styles.css
+++ b/src/paginas/cadastro/styles.css
@@ -8,18 +8,24 @@
     gap: 8px;
     justify-content: center;
     width: 100vw;
+    height: 100%;
 }
 
 .card-cadastro {
-    width: 481px;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.card-cadastro-conteudo {
+    max-width: 440px;
+}
+
 .imagem-cadastro {
-    width: 50%;
+    width: 100%;
+    flex: 1;
 }
 
 .formulario {
@@ -29,16 +35,15 @@
 
 .formulario input {
     margin-top: 16px;
-    width: 476px;
     height: 51px;
     font-size: 16px;
     line-height: 19px;
     color: #968B8B;
+    padding: 0 8px;
 }
 
 .formulario button {
     margin-top: 55px;
-    width: 475px;
     height: 50px;
     background: #04C45C;
     border-radius: 8px;
@@ -47,6 +52,7 @@
     line-height: 19px;
     text-align: center;
     color: #FFFFFF;
+    text-transform: uppercase;
 }
 
 .formulario label {
@@ -57,11 +63,19 @@
     color: #968B8B;
 }
 
-.formulario .cancelar {
+.formulario .btn-cancelar {
     margin-top: 8px;
-    width: 475px;
+    width: 439px;
     height: 50px;
     background: rgba(251, 6, 21, 0.65);
     border-radius: 8px;
     margin-bottom: 50px;
+}
+
+.direcionamento {
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+    font-weight: bold;
 }
