--- a/src/paginas/home/styles.css
+++ b/src/paginas/home/styles.css
@@ -6,6 +6,13 @@
     justify-content: center;
     align-items: center;
 }
+.erro{
+    color: white;
+    font-size: 24px;
+    width: 100%;
+    background-color: #f44336;
+    text-align: center;
+}
 
 .header h1 {
     width: 128px;
@@ -15,6 +22,7 @@
     line-height: 27px;
     text-align: center;
     color: #FFFFFF;
+    text-transform: uppercase;
 }
 
 .btn-add {
