--- a/src/paginas/login/styles.css
+++ b/src/paginas/login/styles.css
@@ -1,14 +1,25 @@
 .card {
     width: 100vw;
+    height:100%;
     display: flex;
     align-items: center;
 }
 
 .imagem-login {
-    width: 50%;
+    height:100%;
+    flex: 1;
+}
+.card-login{
+    flex: 1;
+    display: flex;
+    justify-content: center;
 }
 
-.card-login h3 {
+.card-login-conteudo {
+    max-width: 440px;
+}
+
+.card-login-conteudo h3 {
     width: 76px;
     height: 19px;
     font-size: 16px;
@@ -16,7 +27,7 @@
     color: #000000;
 }
 
-.card-login h1 {
+.card-login-conteudo h1 {
     margin-top: 10px;
     width: 392px;
     height: 38px;
@@ -32,13 +43,12 @@
 }
 
 .formulario input {
-    width: 476px;
     height: 51px;
+    padding: 0 8px;
 }
 
 .formulario button {
     margin-top: 72px;
-    width: 475px;
     height: 50px;
     background: #04C45C;
     border-radius: 8px;
